--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="container text-center">
-<a href="mailto:contatos@intraview.com.br?cc=administrativo@intraview.com.br&bcc=produtos@intraview.com.br&Subject=Informativo%20Feliz%20São%20João%202018!" target="_top"><img alt="Informativo - Feliz São João 2018!" class="media img-responsive" id="imagem" src="https://bit.ly/2JGIiNQ" /></a>
+<a href="mailto:contatos@intraview.com.br?cc=administrativo@intraview.com.br&bcc=produtos@intraview.com.br&Subject=Informativo%20Feliz%20São%20João%202018!" target="_top"><img alt="Informativo - Feliz São João 2018!" class="media img-responsive" id="imagem" src="https://bit.ly/2y4Bkk6" /></a>
 
 <div id="mailto">
 <div id="button"><a alt="Solicite agora o seu orçamento!" href="mailto:contatos@intraview.com.br?cc=administrativo@intraview.com.br&bcc=produtos@intraview.com.br&Subject=Informativo%20Feliz%20São%20João%202018!" id="button_text" target="_top">Solicite agora o seu orçamento!</a></div>
